--- a/Lecture_10_Notes.ipynb
+++ b/Lecture_10_Notes.ipynb
@@ -311,7 +311,17 @@
     " 'user': {'screen_name': 'Matt'},\n",
     " 'quote': 'You know, they do not pay you to juggle one ball'}\n",
     "\n",
-    "matt_data"
+    "matt_data\n",
+    "\n",
+    "\n",
+    "\n",
+    "# {'created_at': 'Mon Oct 10 18:39:51 +0000 2016',\n",
+    "#  'retweet_count': 9,\n",
+    "#  'entities': {'hashtags': [{'indices': [20, 41],\n",
+    "#     'text': 'IndigenousPeoplesDay'}]},\n",
+    "#  'user': {'screen_name': 'UW_iSchool'},\n",
+    "#  'text': 'RT @UWAPress: Happy #IndigenousPeoplesDay https://t.co/YmU9e9lj7v',\n",
+    "#  }"
    ]
   },
   {
@@ -498,6 +508,13 @@
     "matt_data['words_cnt'] = len(matt_data['quote_words'])\n",
     "matt_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
